src/tests/ci/assignment_2_types_variables/valid/09_const_pointer_reassign_ok.c
int main() {
    int x = 1;
    int y = 2;

    const int* p = &x;
    p = &y;       // dit moet toegestaan zijn

    return *p;    // 2
}