src/tests/ci/assignment_2_types_variables/invalid_semantic/12_const_pointer_write_error.c
int main() {
    int x = 1;

    const int* p = &x;
    *p = 5;       // dit moet een semantic error zijn

    return x;
}